修改 卡片會被卡一半問題

--- a/activity_member.html
+++ b/activity_member.html
@@ -50,30 +50,32 @@
         .slider-container {
             position: relative;
             width: 100%;
-            padding: 0 40px;
+            padding: 0 10px; 
             box-sizing: border-box;
         }
 
         .cards-wrapper {
             display: flex;
-            gap: 20px;
+            gap: 20px; 
             overflow-x: auto;
             scroll-behavior: smooth;
-            padding: 15px 5px;
+            padding: 20px 10px; 
             scrollbar-width: none;
             scroll-snap-type: x mandatory;
+            -webkit-overflow-scrolling: touch;
         }
         .cards-wrapper::-webkit-scrollbar { display: none; }
 
         .activity-card {
-            flex: 0 0 280px;
+            flex: 0 0 300px; 
             scroll-snap-align: start; 
+            scroll-snap-stop: always;
             background: rgba(255, 255, 255, 0.6);
             backdrop-filter: blur(15px);
-            border-radius: 20px;
+            border-radius: 25px;
             border: 1px solid rgba(255, 255, 255, 0.4);
-            overflow: hidden;
-            transition: 0.3s;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+            transition: transform 0.3s ease;
         }
         .nav-arrow {
             position: absolute;
@@ -270,3 +272,4 @@
 
 </body>
 </html>
+
