--- a/activity_member.html
+++ b/activity_member.html
@@ -50,53 +50,52 @@
         .slider-container {
             position: relative;
             width: 100%;
-            padding: 0 50px; 
+            padding: 0 60px; 
             box-sizing: border-box;
         }
 
         .cards-wrapper {
-            display: flex;
-            flex-wrap: nowrap;
-            gap: 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            grid-auto-flow: column;
+            grid-auto-columns: minmax(280px, 1fr);
+            gap: 25px;
             overflow-x: auto;
             scroll-behavior: smooth;
-            padding: 20px 0;
+            padding: 20px 5px;
             scrollbar-width: none;
             scroll-snap-type: x mandatory;
         }
         .cards-wrapper::-webkit-scrollbar { display: none; }
 
 .activity-card {
-    /* 使用 calc 讓寬度在不同螢幕下更彈性，同時維持最小 300px */
-    flex: 0 0 300px; 
-    scroll-snap-align: start;
+    width: 100%; /* 寬度由 Grid 控制 */
+    scroll-snap-align: start; /* 捲動停止時自動對齊左側 */
     background: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(15px);
     border-radius: 25px;
     border: 1px solid rgba(255, 255, 255, 0.4);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
-/* 箭頭樣式修正：確保垂直置中且顯眼 */
+
+/* 3. 修正箭頭位置，確保它們出現在最兩側且不會卡住 */
 .nav-arrow {
     position: absolute;
-    top: calc(50% - 20px); /* 精準垂直置中 */
-    width: 44px;
-    height: 44px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 48px;
+    height: 48px;
     background: white;
     border: 2px solid var(--main-purple);
     color: var(--main-purple);
     border-radius: 50%;
-    cursor: pointer;
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    z-index: 20;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
 }
-
-.nav-arrow.left { left: 0; }
-.nav-arrow.right { right: 0; }
+.nav-arrow.left { left: 5px; }
+.nav-arrow.right { right: 5px; }
 
         .act-img { width: 100%; height: 160px; object-fit: cover; }
         .act-info { padding: 15px; display: flex; flex-direction: column; gap: 8px; }
@@ -237,7 +236,7 @@
             const cardsHTML = grouped[title].map(act => {
                 return `
                     <div class="activity-card">
-                        <img src="${act.imageUrl || 'images/none.jpg'}" class="act-img">
+                        <img src="${act.imageUrl || 'images/none.jpg'}" class="act-img" onerror="this.src='images/none.jpg'">
                         <div class="act-info">
                             <div class="act-date">${act.displayDate}</div>
                             <div class="act-subtitle">${act.subTitle}</div>
@@ -287,5 +286,6 @@
 
 </body>
 </html>
+
 
 
