修改btn跟卡片箭頭

--- a/activity_member.html
+++ b/activity_member.html
@@ -138,48 +138,47 @@
         .nav-arrow.left { left: 5px; }
         .nav-arrow.right { right: 5px; }
         .btn-watch {
-    display: block;
-    text-align: center;
-    padding: 12px;
-    background: linear-gradient(135deg, var(--main-purple) 0%, #6a1b9a 100%);
-    color: white !important;
-    border-radius: 50px; /* 圓角膠囊型 */
-    font-weight: bold;
-    text-decoration: none;
-    transition: 0.3s;
-    box-shadow: 0 4px 10px rgba(106, 27, 154, 0.2);
-}
-.btn-watch:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 15px rgba(106, 27, 154, 0.4);
-    filter: brightness(1.1);
-}
+            display: block;
+            text-align: center;
+            padding: 12px;
+            background: linear-gradient(135deg, #a29bfe, var(--main-purple));
+            color: white !important;
+            border-radius: 50px; 
+            font-weight: bold;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(108, 92, 231, 0.2);
+            margin-top: auto;
+        }
+        .btn-watch:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(108, 92, 231, 0.4);
+            filter: brightness(1.1);
+        }
 
         /* 手機版 RWD 修正 */
         @media (max-width: 768px) {
             search-container {
-        flex-direction: column;
-        padding: 20px;
-        gap: 12px;
-    }
-    .search-group {
-        width: 100%;
-        justify-content: space-between;
-    }
-    .search-group input {
-        flex: 1;
-    }
-    .btn-search {
-        width: 48%; /* 讓兩個按鈕排成一排 */
-    }
-    .search-buttons {
-        display: flex;
-        width: 100%;
-        gap: 10px;
-        justify-content: center;
-    }
-            nav { flex-direction: column !important; padding: 10px 0; }
-            nav ul { 
+                flex-direction: column;
+                padding: 15px;
+                align-items: stretch;
+            }
+            .search-group {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                gap: 5px;
+            }
+            .search-group input { flex: 1;font-size: 14px; }
+            .btn-search { flex: 1;padding: 10px 0; }
+            .search-buttons {
+                display: flex;
+                margin-top: 5px;
+                gap: 10px;
+                justify-content: center;
+            }
+            .nav { flex-direction: column !important; padding: 10px 0; }
+            .nav ul { 
                 flex-direction: row !important; 
                 overflow-x: auto; 
                 width: 100%; 
@@ -187,11 +186,16 @@
                 padding: 10px 20px;
                 gap: 15px;
             }
-            nav ul li a { white-space: nowrap; font-size: 14px; }
-
-            /* 2. 修正卡片：手機版顯示 100% 寬度，不露出邊緣 */
-            .slider-container { padding: 0; }
-            .nav-arrow { display: none; }
+            .nav ul li a { white-space: nowrap; font-size: 14px; }
+            .slider-container { padding: 0 10px; }
+            .nav-arrow { 
+                display: flex; 
+                width: 35px;
+                height: 35px;
+                z-index: 100;
+            }
+            .nav-arrow.left { left: 2px; }
+            .nav-arrow.right { right: 2px; }
             .activity-card {
                 flex: 0 0 100%;
                 scroll-snap-align: start;
@@ -340,4 +344,5 @@
 </script>
 </body>
 </html>
+
 
