新增選單選項'官方影片'

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 	        <li><a href="members.html">成員介紹</a></li>
             <li><a href="discography.html">打歌活動</a></li>
             <li><a href="variety.html">綜藝活動</a></li>
+			<li><a href="official.html">官方影片</a></li>
         </ul>
 </nav>
 
@@ -320,6 +321,7 @@ window.onload = () => {
 </body>
 
 </html>
+
 
 
 
