手機版改成漢堡選單

--- a/index.html
+++ b/index.html
@@ -73,14 +73,22 @@
 <body>
 
 <nav>
-        <div class="logo">CRAVITY</div>
-        <ul>
+    <div class="nav-container">
+        <div class="logo">CRAVITY</div>    
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-menu">
             <li><a href="index.html">團體介紹</a></li>
-	        <li><a href="members.html">成員介紹</a></li>
+            <li><a href="members.html">成員介紹</a></li>
+			<li><a href="ccrew.html">CCREW介紹</a></li>
             <li><a href="discography.html">打歌活動</a></li>
             <li><a href="variety.html">綜藝活動</a></li>
-			<li><a href="official.html">官方影片</a></li>
+            <li><a href="official.html">官方影片</a></li>
         </ul>
+    </div>
 </nav>
 
 <div class="group-photo-container">
@@ -311,6 +319,19 @@ function startSlideshow() {
     }, 4000); // 每 4 秒換一張
 }
 
+const menu = document.querySelector('#mobile-menu');
+const menuLinks = document.querySelector('.nav-menu');
+
+menu.addEventListener('click', function() {
+    menu.classList.toggle('is-active');
+    menuLinks.classList.toggle('active');
+});
+
+document.querySelectorAll('.nav-menu a').forEach(n => n.addEventListener('click', () => {
+    menu.classList.remove('is-active');
+    menuLinks.classList.remove('active');
+}));
+
 // 整合到原本的 window.onload
 window.onload = () => {
     initLeftSelect();
@@ -321,6 +342,7 @@ window.onload = () => {
 </body>
 
 </html>
+
 
 
 
