手機版改成漢堡選單

--- a/members.html
+++ b/members.html
@@ -91,14 +91,23 @@
 <body>
 
 <nav>
-    <div class="logo">CRAVITY</div>
-    <ul>
-        <li><a href="index.html">團體介紹</a></li>
-        <li><a href="members.html">成員介紹</a></li>
-        <li><a href="discography.html">打歌活動</a></li>
-        <li><a href="variety.html">綜藝活動</a></li>
-		<li><a href="official.html">官方活動</a></li>
-    </ul>
+    <div class="nav-container">
+        <div class="logo">CRAVITY</div>
+        
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-menu">
+            <li><a href="index.html">團體介紹</a></li>
+            <li><a href="members.html">成員介紹</a></li>
+			<li><a href="ccrew.html">CCREW介紹</a></li>
+            <li><a href="discography.html">打歌活動</a></li>
+            <li><a href="variety.html">綜藝活動</a></li>
+            <li><a href="official.html">官方影片</a></li>
+        </ul>
+    </div>
 </nav>
 
 <header style="text-align: center; padding: 30px 0 0 0;">
@@ -216,8 +225,22 @@
     `;
     listContainer.appendChild(card);
 });
+const menu = document.querySelector('#mobile-menu');
+const menuLinks = document.querySelector('.nav-menu');
+
+menu.addEventListener('click', function() {
+    menu.classList.toggle('is-active');
+    menuLinks.classList.toggle('active');
+});
+
+// 點擊連結後自動關閉選單（增加使用者體驗）
+document.querySelectorAll('.nav-menu a').forEach(n => n.addEventListener('click', () => {
+    menu.classList.remove('is-active');
+    menuLinks.classList.remove('active');
+}));
 </script>
 </body>
 </html>
+
 
 
